--- a/analiza_1.tex
+++ b/analiza_1.tex
@@ -1263,6 +1263,55 @@ $\inf{f(A)},\, \sup{f(A)}\in f(A)$, czyli
 \end{equation*}
 \end{twier}
 
+\textit{\textbf{\underline{Przypadek szczególny:}}} Jeśli $f:[a,b]\to\R$ jest funkcją ciągłą, to
+\begin{equation*}
+    \exists_{c, d\in[a,b]}\quad f(c)=\min{\set{f(x):x\in[a,b]}}\ \land\ f(d)=\max{\set{f(x):x\in[a,b]}}.
+\end{equation*}
+
+\begin{twier}{Twierdzenie 7.8}
+    Ciągły obraz zbioru spójnego jest spójny.
+\end{twier}
+
+\begin{twier}{Twierdzenie Darboux o wartości pośredniej 7.9}
+    Niech $(X, d_X)$ będzie przestrzenią metryczną, a $f:X\to\R$ funkcją ciągłą. Jeśli $A\subset X$ jest zbiorem spójnym, to
+    \begin{equation*}
+        \forall_{y_1, y_2\in f(A),\ y_1\le y_2}:\hquad [y_1, y_2]\subset f(A)\text{, czyli }\forall_{y\in R,\ y_1\le y\le y_2}\ \exists_{x\in A}\hquad y=f(x).
+    \end{equation*}
+\end{twier}
+
+\textit{\textbf{\underline{Przypadek szczególny:}}} Jeśli $f:[a,b]\to\R$ jest funkcją ciągłą, to
+\begin{equation*}
+    \forall_{y\in[min{\set{f(a),f(b)}},\, max{\set{f(a),f(b)}}]}\ \exists_{x\in[a,b]}\hquad y=f(x).
+\end{equation*}
+
+\begin{twier}{Twierdzenie o ciągłości funkcji odwrotnej 7.10}
+    Jeżeli funkcja ciągła $f:A\to\R$ jest ściśle monotoniczna na przedziale $A\subset\R$, wówczas
+    $f^{-1}:f(A)\to A$ jest również ciągła i ściśle monotoniczna.
+\end{twier}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
